# agent-solution

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  FEAT-011-PROGRESS.md  FEAT-011-SLICE-PLAN.md  MR_DESCRIPTION.md  MR_DESCRIPTION_SHORT.md  MR_SUPPLEMENT.md  README.md  README.zh.md  TestRun.rar  Third_Party_Open_Source_Software_Notice.txt
common/agent-evolve/evoagent/: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  metadata.json  pyproject.toml
common/agent-evolve/evoagent-adapter/: .dockerignore  .gitignore  README.md  pyproject.toml
common/agent-evolve/evoagent-adapter/data/skills/: README.md
common/agent-evolve/evoagent-adapter/deployment/: Dockerfile  docker-compose.managed-doc.yml  docker-compose.yml  export-bundle.sh  start.sh  stop.sh
common/agent-evolve/evoagent-adapter/deployment/config/: .env.example  agent_adapter_config.yaml
common/agent-evolve/evoagent-adapter/deployment/sandbox-experiment/: .env.example  .gitignore  README.md  agent_adapter_config.yaml  docker-compose.yml  edp_a2a.env  edp_va.env  run_dialogue_skill_e2e.py  run_e2e_and_report.py  start_stack.ps1  verify_jiuwenbox_skill_hotupdate.py
common/agent-evolve/evoagent-adapter/src/agent_adapter/: __init__.py  __main__.py  agent_client.py  cleaner.py  cli.py  config.py  jiuwenbox_skill_store.py  logging.py  offset.py  pairing.py  parser.py  pipeline.py  reader.py  sandbox_resolve.py  schemas.py  skill_store.py  skill_store_factory.py  trace_assembler.py  trace_cleaner.py
common/agent-evolve/evoagent-adapter/tests/: _testdata.py
common/agent-evolve/evoagent-adapter/tests/data/: otel_spans.jsonl  otel_spans_v2.jsonl
common/agent-evolve/evoagent-adapter/tests/integration/: _pgutil.py  conftest.py  test_api.py  test_cli.py  test_db_trace_source.py  test_e2e.py  test_kafka_consumer.py  test_managed_doc_contract.py  test_managed_doc_it.py  test_pipeline.py  test_postgres_repository.py  test_trace_routes_standard.py
common/agent-evolve/evoagent-adapter/tests/sandbox_mode/: README.md
common/agent-evolve/evoagent-adapter/tests/skill_hotupdate/: README.md
common/agent-evolve/evoagent-adapter/tests/unit/: test_agent_call_api.py  test_agent_client.py  (+41 more)
common/agent-evolve/evoagent/deployment/: .gitignore  Dockerfile  README.md  build.sh  customer-deployment-guide.md  export-bundle.sh  import-bundle.sh  operations-guide.md  stop.sh  tf-grpo-test-environment-guide.html
(+1718 files in other folders)
