[project]
name = "agent-adapter"
version = "0.1.0"
description = "Lightweight adapter for incremental EDPAgent log collection and structured extraction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.9.0",
  "pyyaml>=6.0.0",
  "rich>=14.0.0",
  "structlog>=25.0.0",
  "typer>=0.15.0",
  "uvicorn[standard]>=0.34.0",
]

[project.scripts]
agent-adapter = "agent_adapter.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_adapter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
