[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evo-agent"
version = "0.1.0"
description = "Self-evolving meta-agent that optimizes skill documents via ReflACT pipeline."
requires-python = ">=3.12"
dependencies = [
    "openjiuwen==0.1.13",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]


[tool.hatch.build.targets.wheel]
packages = ["src/evo_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "openjiuwen.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--import-mode=importlib"
